Add chat plugin

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,21 @@ LICENSE file in the root directory of this source tree.
     <title>Messenger Demo</title>
   </head>
   <body>
+    <!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  page_id="2007081099551346"
+  theme_color="#6699cc">
+</div>
     <script>
       window.fbAsyncInit = function() {
         FB.init({
