Remove old script.

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@ LICENSE file in the root directory of this source tree.
   page_id="2007081099551346"
   theme_color="#6699cc">
 </div>
-    <script>
+    <!-- <script>
       window.fbAsyncInit = function() {
         FB.init({
           appId: 'APP_ID',
@@ -43,7 +43,7 @@ LICENSE file in the root directory of this source tree.
          js.src = "//connect.facebook.net/en_US/sdk.js";
          fjs.parentNode.insertBefore(js, fjs);
        }(document, 'script', 'facebook-jssdk'));
-    </script>
+    </script> -->
 
     <h1>Messenger Demo</h1>
 
