--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,8 @@ LICENSE file in the root directory of this source tree.
       <p>The "Send to Messenger" plugin will trigger an authentication callback to your webhook.</p>
 
       <div class="fb-send-to-messenger" 
-        messenger_app_id='APP_ID'
-        page_id='PAGE_ID'
+        messenger_app_id='327701637752627'
+        page_id='2007081099551346'
         data-ref="PASS_THROUGH_PARAM" 
         color="blue" 
         size="standard">
@@ -63,8 +63,8 @@ LICENSE file in the root directory of this source tree.
       <p>The "Message Us" plugin takes the user directly to Messenger and into a thread with your Page.</p>
 
       <div class="fb-messengermessageus" 
-        messenger_app_id='APP_ID'
-        page_id='PAGE_ID'
+        messenger_app_id='327701637752627'
+        page_id='2007081099551346'
         color="blue"
         size="standard">
       </div>
