--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,29 @@ a2a_config.icon_color = "#6bc048";
 body.custom-background { background-color: #ffffff; }
 </style>
 </head>
-<body class="home page-template-default page page-id-15 custom-background custom-header header-image full-width-content highriskhope outreach-pro-home" itemscope itemtype="https://schema.org/WebPage"><div class="site-container"><header class="site-header" itemscope itemtype="https://schema.org/WPHeader"><div class="wrap"><div class="title-area"><p class="site-title" itemprop="headline"><a href="https://www.highriskhope.org/">High Risk Hope</a></p><p class="site-description" itemprop="description">Resource for Women with High Risk Pregnancy</p></div><div class="widget-area header-widget-area"><section id="lsi_widget-2" class="widget widget_lsi_widget"><div class="widget-wrap"><ul class="lsi-social-icons icon-set-lsi_widget-2" style="text-align: right"><li class="lsi-social-email"><a class="" rel="nofollow" title="Contact" aria-label="Contact" href="/contact-us/" ><i class="lsicon lsicon-email"></i></a></li><li class="lsi-social-facebook"><a class="" rel="nofollow" title="Facebook" aria-label="Facebook" href="https://www.facebook.com/highriskhope" target="_blank"><i class="lsicon lsicon-facebook"></i></a></li><li class="lsi-social-gplus"><a class="" rel="nofollow" title="Google+" aria-label="Google+" href="http://www.google.com/+HighriskhopeOrgHRH" target="_blank"><i class="lsicon lsicon-gplus"></i></a></li><li class="lsi-social-instagram"><a class="" rel="nofollow" title="Instagram" aria-label="Instagram" href="http://instagram.com/highriskhope" target="_blank"><i class="lsicon lsicon-instagram"></i></a></li><li class="lsi-social-twitter"><a class="" rel="nofollow" title="Twitter" aria-label="Twitter" href="https://twitter.com/highriskhope" target="_blank"><i class="lsicon lsicon-twitter"></i></a></li><li class="lsi-social-vimeo"><a class="" rel="nofollow" title="Vimeo" aria-label="Vimeo" href="https://vimeo.com/hrh" target="_blank"><i class="lsicon lsicon-vimeo"></i></a></li></ul></div></section>
+<body class="home page-template-default page page-id-15 custom-background custom-header header-image full-width-content highriskhope outreach-pro-home" itemscope itemtype="https://schema.org/WebPage">
+  
+   <!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  page_id="448619822237104"
+  theme_color="#6699cc">
+</div>
+
+
+  
+  
+  
+  <div class="site-container"><header class="site-header" itemscope itemtype="https://schema.org/WPHeader"><div class="wrap"><div class="title-area"><p class="site-title" itemprop="headline"><a href="https://www.highriskhope.org/">High Risk Hope</a></p><p class="site-description" itemprop="description">Resource for Women with High Risk Pregnancy</p></div><div class="widget-area header-widget-area"><section id="lsi_widget-2" class="widget widget_lsi_widget"><div class="widget-wrap"><ul class="lsi-social-icons icon-set-lsi_widget-2" style="text-align: right"><li class="lsi-social-email"><a class="" rel="nofollow" title="Contact" aria-label="Contact" href="/contact-us/" ><i class="lsicon lsicon-email"></i></a></li><li class="lsi-social-facebook"><a class="" rel="nofollow" title="Facebook" aria-label="Facebook" href="https://www.facebook.com/highriskhope" target="_blank"><i class="lsicon lsicon-facebook"></i></a></li><li class="lsi-social-gplus"><a class="" rel="nofollow" title="Google+" aria-label="Google+" href="http://www.google.com/+HighriskhopeOrgHRH" target="_blank"><i class="lsicon lsicon-gplus"></i></a></li><li class="lsi-social-instagram"><a class="" rel="nofollow" title="Instagram" aria-label="Instagram" href="http://instagram.com/highriskhope" target="_blank"><i class="lsicon lsicon-instagram"></i></a></li><li class="lsi-social-twitter"><a class="" rel="nofollow" title="Twitter" aria-label="Twitter" href="https://twitter.com/highriskhope" target="_blank"><i class="lsicon lsicon-twitter"></i></a></li><li class="lsi-social-vimeo"><a class="" rel="nofollow" title="Vimeo" aria-label="Vimeo" href="https://vimeo.com/hrh" target="_blank"><i class="lsicon lsicon-vimeo"></i></a></li></ul></div></section>
 <section id="text-10" class="widget widget_text"><div class="widget-wrap">			<div class="textwidget">  <a class="button-clear-head" href="https://interland3.donorperfect.net/weblink/WebLink.aspx?name=E251674&id=1">Donate</a>  
 <a class="button-clear-head" href="https://www.highriskhope.org/shop/">Shop</a>  
 <a class="button-clear-head" href="https://www.tottrot.org">Tot Trot</a>  
